[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-codex-orchestrator"
version = "1.0.0"
description = "Framework de orquestração Worker (GitHub Models) + Reviewer (Claude Code CLI)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Repository = "https://github.com/jessefreitas/claude_codex_workers"

[tool.setuptools.packages.find]
include = ["orchestrator*"]
